# PerceptronC

./: CMakeLists.txt
biblioteka/: CMakeLists.txt
biblioteka/include/: Function.h  Gnuplot_i.h  Perceptron.h  Point.h
biblioteka/src/: Function.cpp  Perceptron.cpp  Point.cpp
program/: CMakeLists.txt
program/src/: main.cpp
